--- a/popup.html
+++ b/popup.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title></title>
-	<link rel="stylesheet" type="text/css" href="main.css">
-</head>
-<body>
-	<div class="container">
-		<div id="stock">loading...</div>
-		<div id="add" class="add">
-			<input type="button" id="addBtn" value="Add One" />
-		</div>
-	</div>
-	<script src="main.js"></script>
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <title></title>
+        <link rel="stylesheet" type="text/css" href="main.css" />
+    </head>
+    <body>
+        <ul id="list" class="list"></ul>
+        <script src="data.js"></script>
+        <script src="main.js"></script>
+    </body>
 </html>
